# Deep-Learning-Udemy

./: main.py  pyproject.toml
secc_5/: Caso Práctico -  MPNeuron.ipynb  cancer_de_mama.ipynb
